# tap-servicenow

./: LICENSE  README.md  meltano.yml  pyproject.toml
tap_ServiceNow/: __init__.py  client.py  streams.py  tap.py
tap_servicenow/: client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
